@@ -1,7 +1,8 @@
 2007-03-05  Johan Euphrosine  <proppy@aminche.com>
 
-	*  added hierarchy for seat widget, using transform for name and money label
+	*  added pot chips display
 	*  added bet chips display
+	*  added hierarchy for seat widget, using transform for name and money label
 
 2007-05-05  Johan Euphrosine  <proppy@aminche.com>
 
